# WestshoreWatch-Firmware

./: CLAUDE.md  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
WSW-Firmware/: CMakeLists.txt  Westshore_Drone_RID_Firmware_Guide.docx  partitions.esp32c6.csv  sdkconfig.defaults  sdkconfig.defaults.esp32c5  sdkconfig.defaults.esp32c6
WSW-Firmware/main/: CMakeLists.txt  ble_relay.c  ble_scanner.c  ble_scanner.h  config.h  config_server.c  dns_server.c  dns_server.h  led.c  led.h  main.c  odid_decoder.c  odid_decoder.h  ota_handler.c  output.c  output.h  wifi_scanner.c
XIAO-C5-Firmware/: .gitignore  CLAUDE.md  CMakeLists.txt  MERGE_CHECKLIST.md  README.md  partitions.esp32c5.csv  sdkconfig.defaults
XIAO-C5-Firmware/main/: CMakeLists.txt  ble_relay.c  ble_relay.h  ble_scanner.c  cellular_uart.c  cellular_uart.h  cellular_uploader.c  cellular_uploader.h  config.h  config_server.h  detection_queue.c  gnss_reader.c  gnss_reader.h  idf_component.yml  led.c  led.h  main.c  modem_data_resume.cpp  modem_data_resume.h  modem_http.c  modem_http.h  modem_manager.c  modem_manager.h  nvs_config.c  nvs_config.h  odid_decoder.h  output.c  status_led.c  status_led.h  wifi_scanner.c  wifi_scanner.h
XIAO-C5-Firmware/scripts/: idf-env.ps1
XIAO-C5-Firmware/scripts/pin_probe/: pin_probe.ino
main/: CMakeLists.txt  ble_relay.c  ble_relay.h  config.h  config_server.c  config_server.h  led.c  main.c  nvs_config.c  nvs_config.h  ota_handler.h  output.c  wifi_scanner.c  wifi_scanner.h
mnt/user-data/outputs/westshore_firmware/: CMakeLists.txt
scripts/: build.bat
